syntax = "proto3";

package pmsPb;

option go_package = "./pmsPb";

// ------------------------------------
// Common Message
// ------------------------------------
message IdReq {
  int64 id = 1;
}

message IdsReq {
  string ids = 1;
}

message AnyReq {
}

message IdResp {
  int64 id = 1;
}

message  ListReq{
  string keywords = 1;
  int64 status = 2;
  string startTime = 3;
  string endTime = 4;
  int64 pageNum = 5;
  int64 pageSize = 6;
}

message OptionItem{
  string label = 1;
  int64 value = 2;
}

message OptionsResp{
  repeated OptionItem items = 1;
}

message RepOptionItem{
  string label = 1;
  int64 value = 2;
  repeated RepOptionItem children = 3;
}

message RepOptionsResp{
  repeated RepOptionItem items = 1;
}

message SuccessResp {
}

message SuccessIdResp {
  int64 id = 1;
}



//--------------------------------shop--------------------------------
message Shop {
  int64 id = 1; //id
  string name = 2; //店铺名称
  string tel = 3; //店铺电话
  string notice = 4; //公告
  double distributionFee = 5; //配送费
  int64 status = 6; //状态1正常 0禁用
  string createdAt = 7; //createdAt
  string updatedAt = 8; //updatedAt
}

message ShopForm {
  int64 id = 1; //id
  string name = 2; //店铺名称
  string tel = 3; //店铺电话
  string notice = 4; //公告
  double distributionFee = 5; //配送费
}



//--------------------------------商品分类表--------------------------------
message PmsCategory {
  int64 id = 1; //主键
  int64 shopId = 2; //shop_id
  int64 parentId = 3; //父级ID
  string name = 4; //商品分类名称
  string icon = 5; //图标地址
  int64 sort = 6; //排序
  int64 visible = 7; //显示状态:( 0:隐藏 1:显示)
  string createdAt = 8; //创建时间
  repeated PmsCategory children = 9;
}

message  PmsCategoryListReq{
  string keywords = 1;
  int64 status = 2;
  string startTime = 3;
  string endTime = 4;
  int64 pageNum = 5;
  int64 pageSize = 6;
  int64 shopId = 7;
}


message PmsCategoryForm {
  int64 id = 1; //主键
  int64 shopId = 2; //shop_id
  int64 parentId = 3; //父级ID
  string name = 4; //商品分类名称
  string icon = 5; //图标地址
  int64 sort = 6; //排序
  int64 visible = 7; //显示状态:( 0:隐藏 1:显示)
}

message PmsCategoryListResp {
  repeated PmsCategory List = 1; //shopCategory
}

//--------------------------------商品属性表--------------------------------
message PmsCategoryAttribute {
  int64 id = 1; //主键
  int64 categoryId = 2; //分类ID
  string name = 3; //属性名称
  int64 type = 4; //类型(1:规格;2:属性;)
  string createdAt = 5; //创建时间
}

//--------------------------------商品品牌表--------------------------------
message PmsBrand {
  int64 id = 1; //主键
  int64 shopId = 2; //shopID
  string name = 3; //品牌名称
  string logo = 4; //LOGO图片
  int64 sort = 5; //排序
  string createdAt = 6; //创建时间
  string updatedAt = 7; //更新时间
}

message PmsBrandForm {
  int64 id = 1; //主键
  int64 shopId = 2; //shopID
  string name = 3; //品牌名称
  string logo = 4; //LOGO图片
  int64 sort = 5; //排序
}

message PmsBrandListResp {
  repeated PmsBrand List = 1;
  int64 total = 2;
}

//--------------------------------商品表--------------------------------
message PmsGoods {
  int64 id = 1; //主键
  string name = 2; //商品名称
  int64 shopId = 3; //shopID
  int64 categoryId = 4; //商品类型ID
  int64 brandId = 5; //商品品牌ID
  int64 originPrice = 6; //原价【起】
  int64 price = 7; //现价【起】
  int64 sales = 8; //销量
  string picUrl = 9; //商品主图
  string album = 10; //商品图册
  string unit = 11; //单位
  string description = 12; //商品简介
  string detail = 13; //商品详情
  int64 status = 14; //商品状态(0:下架 1:上架)
  string createdAt = 15; //创建时间
  string updatedAt = 16; //更新时间
}

//--------------------------------商品属性/规格表--------------------------------
message PmsGoodsAttribute {
  int64 id = 1; //主键
  int64 goodsId = 2; //goods ID
  int64 attributeId = 3; //属性ID
  string name = 4; //属性名称
  string value = 5; //属性值
  int64 type = 6; //类型(1:规格;2:属性;)
  string picUrl = 7; //规格图片
  string createdAt = 8; //创建时间
  string updatedAt = 9; //更新时间
}

message  PmsCategoryAttributeAddReq{
  int64 categoryId = 1; //属性ID
  int64 type = 2;
  repeated string attributes = 3;
}

message  PmsCategoryAttributeListReq{
  int64 categoryId = 1; //属性ID
  int64 type = 2;
}

message  PmsCategoryAttributeListResp{
  repeated PmsCategoryAttribute list = 1;
}

//--------------------------------sku--------------------------------
message PmsSku {
  int64 id = 1; //id
  int64 goodsId = 2; //goods ID
  string skuSn = 3; //商品编码
  string name = 4; //商品名称
  string specIds = 5; //商品规格值，以英文逗号(,)分割
  int64 price = 6; //商品价格(单位：分)
  int64 stock = 7; //库存数量
  int64 lockedStock = 8; //库存锁定数量
  string picUrl = 9; //商品图片地址
  string createdAt = 10; //创建时间
}

message ShopListResp {
  repeated Shop list = 1;
  int64 total = 2;
}


// goods
message PmsGoodsListReq{
  string keywords = 1;
  int64 status = 2;
  string startTime = 3;
  string endTime = 4;
  int64 pageNum = 5;
  int64 pageSize = 6;
  int64 shopId = 7;
  int64 categoryId = 8;
}

message PmsGoodsInfo {
  int64 id = 1; //主键
  string name = 2; //商品名称
  int64 shopId = 3; //shopID
  int64 categoryId = 4; //商品类型ID
  int64 brandId = 5; //商品品牌ID
  int64 originPrice = 6; //原价【起】
  int64 price = 7; //现价【起】
  int64 sales = 8; //销量
  string picUrl = 9; //商品主图
  repeated string subPicUrls = 10; //商品图册
  string unit = 11; //单位
  string description = 12; //商品简介
  string detail = 13; //商品详情
  int64 status = 14; //商品状态(0:下架 1:上架)
  string createdAt = 15; //创建时间
  repeated PmsSku skuList = 16;
  string categoryName = 17;
  string brandName = 18;
  repeated PmsGoodsAttribute attrList = 19;
  repeated PmsGoodsAttribute specList = 20;
}

message  PmsBrandListReq{
  string keywords = 1;
  int64 shopId = 2;
  string startTime = 3;
  string endTime = 4;
  int64 pageNum = 5;
  int64 pageSize = 6;
}

message PmsGoodsListResp {
  repeated PmsGoodsInfo List = 1;
  int64 Total = 2;
}

message PmsGoodsForm{
  int64 id = 1;
  string name = 2;
  int64 shopId = 3;
  int64 categoryId = 4;
  int64 brandId = 5;
  int64 originPrice = 6;
  int64 price = 7;
  int64 sales = 8;
  string picUrl = 9;
  repeated string subPicUrls = 10;
  string unit = 11;
  string description = 12;
  string detail = 13;
  repeated PmsGoodsFormSku skuList = 14;
  repeated PmsGoodsFormAttribute attrList = 15;
  repeated PmsGoodsFormAttribute specList = 16;
}

message PmsGoodsFormAttribute{
  int64 id = 1;
  string name = 2;
  string value = 3;
  int64 type = 4; //类型(1:规格;2:属性;)
  string idStr = 5;
  string picUrl = 6;
}

message PmsGoodsFormSku{
  int64 id = 1; //id
  int64 goodsId = 2; //goods ID
  string skuSn = 3; //商品编码
  string name = 4; //商品名称
  string specIds = 5; //商品规格值，以英文逗号(,)分割
  int64 price = 6; //商品价格(单位：分)
  int64 stock = 7; //库存数量
  int64 lockedStock = 8; //库存锁定数量
}

service pms{

  rpc ShopGet(IdReq) returns (Shop);
  rpc ShopList(ListReq) returns (ShopListResp);
  rpc ShopAdd(ShopForm) returns(SuccessIdResp);
  rpc ShopUpdate(ShopForm) returns(SuccessResp);
  rpc ShopDel(IdsReq) returns (SuccessResp);
  rpc ShopOptions(AnyReq) returns (OptionsResp);

  rpc PmsCategoryGet(IdReq) returns (PmsCategory);
  rpc PmsCategoryList(PmsCategoryListReq) returns (PmsCategoryListResp);
  rpc PmsCategoryAdd(PmsCategoryForm) returns(SuccessIdResp);
  rpc PmsCategoryUpdate(PmsCategoryForm) returns(SuccessResp);
  rpc PmsCategoryDel(IdsReq) returns (SuccessResp);
  rpc PmsCategoryOptions(IdReq) returns (RepOptionsResp);

  rpc PmsCategoryAttributeList(PmsCategoryAttributeListReq) returns (PmsCategoryAttributeListResp);
  rpc PmsCategoryAttributeAdd(PmsCategoryAttributeAddReq) returns(SuccessResp);

  rpc PmsBrandGet(IdReq) returns (PmsBrand);
  rpc PmsBrandList(PmsBrandListReq) returns (PmsBrandListResp);
  rpc PmsBrandAdd(PmsBrandForm) returns(SuccessIdResp);
  rpc PmsBrandUpdate(PmsBrandForm) returns(SuccessResp);
  rpc PmsBrandDel(IdsReq) returns (SuccessResp);
  rpc PmsBrandOptions(IdReq) returns (OptionsResp);


  rpc PmsGoodsList(PmsGoodsListReq) returns (PmsGoodsListResp);
  rpc PmsGoodsGet(IdReq) returns (PmsGoodsInfo);
  rpc PmsGoodsDel(IdsReq) returns (SuccessResp);
  rpc PmsGoodsEdit(PmsGoodsForm) returns (SuccessIdResp);


}